gitops/apps/wekan/namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: wekan
  labels:
    name: wekan
